Kubernetes/Lastest/admin/ingress/base-auth.yaml
# 配置BasicAuth中间件, 将swh的secret加入
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-basic-auth
spec:
  basicAuth:
    secret: traefik-authsecret
---
# 使用ingressRoute方式(tls)
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
spec:
  entryPoints:
    # 指定入口点为websecure。这里的websecure就是traefik静态配置(启动参数)中的 --entryPoints.websecure.address=:8443,通过仪表盘也可以看到
    - websecure
  tls:
    secretName: traefik-signed-cert # kubectl get certificate可查寻到
  routes:
    - kind: Rule
      match: Host(`k8s.swh.com`) # 匹配规则,第三部分说明
      services:
        - name: traefik
          port: 32090
