Kubernetes/Lastest/admin/ingress/basic-auth.yaml
# 声明用户列表
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth
spec:
  basicAuth:
    secret: traefik-authsecret
---
# dashboard.yaml: ingressRoute暴露服务
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    # valuse-auth.yaml中对应的 traefik dashboard 端口别名
    - traefik
  routes:
    - match: Host(`k8s.swh.com`)
      kind: Rule
      services:
        - name: api@internal
          port: 32090
          kind: TraefikService
      middlewares:
        - name: traefik-auth
